--- a/index.html
+++ b/index.html
@@ -127,21 +127,19 @@
 <div id="contact">
     <h2 class="section_title">CONTACT ME</h2>
     <div class="form_container">
-        <form>
+        <form action="contact.html" method="POST">
             <label for="name">Your name</label><br>
             <input type="text" id="name" name="name"><br>
             <label for="email">Your email</label><br>
             <input type="email" id="email" name="email"><br>
             <label for="message">Your message</label><br>
-            <textarea id="message" name="message" rows="4" cols="50">
-            </textarea> <br />
+            <textarea id="message" name="message" rows="4" cols="50"></textarea> <br />
             <button type="submit" class="button">Send Message</button>
         </form>
     </div>
-
 </div>
     </main>
-    <footer  class="footer_container">
+    <footer class="footer_container">
         <p>&copy 2022 Designed and Developed by Kedar Karki</p>
     </footer>
 </body>
