form method change

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <div id="contact">
     <h2 class="section_title">CONTACT ME</h2>
     <div class="form_container">
-        <form action="contact.html" method="POST">
+        <form action="contact.html" method="GET">
             <label for="name">Your name</label><br>
             <input type="text" id="name" name="name"><br>
             <label for="email">Your email</label><br>
