--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="nav_container">
+    <nav class="nav_container shadow">
         <div class="nav_items">
             <a href="#" class="logo">
                 <img src='images/avatar-male.svg' width=30 height=30 />
@@ -46,11 +46,11 @@
                 <p class="text_normal">Hello, I'm</p>
                 <p class="typewriter text_big">KEDAR KARKI</p>
                 <p class="text_normal">WEB DEVELOPER</p>
-                <button class="button">
+                <button class="button gradient">
                     Download CV
                 </button>
             </div>
-            <div class="card">
+            <div class="card gradient shadow">
                 <p>
                     Hi, I am Kedar Karki. I am a web developer from Nepal. I have been designing and developing websites
                     for 3 years. I an proficient in HTML and CSS. I can also deploy the website into GitHub.
@@ -63,19 +63,19 @@
             <h2 class="section_title">MY SKILLS</h2>
             <div class="skills_list">
                 <div class="skill_item">
-                    <div class="skill_icon">
+                    <div class="skill_icon gradient">
                         <img src="images/html5.svg" />
                     </div>
                     <p>HTML5</p>
                 </div>
                 <div class="skill_item">
-                    <div class="skill_icon">
+                    <div class="skill_icon gradient">
                         <p style="color: white; font-weight: bold; font-size: 1.5rem;">CSS</p>
                     </div>
                     <p>CSS</p>
                 </div>
                 <div class="skill_item">
-                    <div class="skill_icon">
+                    <div class="skill_icon gradient">
                         <img src="images/github.svg" />
                     </div>
                     <p>GitHub</p>
@@ -86,37 +86,37 @@
         <div id="projects" class="projects_container">
             <h2 class="section_title">MY PROJECTS</h2>
             <div class="projects_grid">
-                <div class="project_grid_item">
+                <div class="project_grid_item shadow">
                     <img src="images/facebook.png"/>
                     <div class="project_title">
                         <p>Facebook UI</p>
                     </div>
                 </div>
-                <div class="project_grid_item">
+                <div class="project_grid_item shadow">
                     <img src="images/twitter.png"/>
                     <div class="project_title">
                         <p>Twitter Clone</p>
                     </div>
                 </div>
-                <div class="project_grid_item">
+                <div class="project_grid_item shadow">
                     <img src="images/github.jpg"/>
                     <div class="project_title">
                         <p>GitHub</p>
                     </div>
                 </div>
-                <div class="project_grid_item">
+                <div class="project_grid_item shadow">
                     <img src="images/tesla.jpg"/>
                     <div class="project_title">
                         <p>Car Marketplace</p>
                     </div>
                 </div>
-                <div class="project_grid_item">
+                <div class="project_grid_item shadow">
                     <img src="images/news.jpg"/>
                     <div class="project_title">
                         <p>News Site</p>
                     </div>
                 </div>
-                <div class="project_grid_item">
+                <div class="project_grid_item shadow">
                     <img src="images/blog.jpg"/>
                     <div class="project_title">
                         <p>Tech Blog</p>
@@ -134,12 +134,12 @@
             <input type="email" id="email" name="email"><br>
             <label for="message">Your message</label><br>
             <textarea id="message" name="message" rows="4" cols="50"></textarea> <br />
-            <button type="submit" class="button">Send Message</button>
+            <button type="submit" class="button gradient">Send Message</button>
         </form>
     </div>
 </div>
     </main>
-    <footer class="footer_container">
+    <footer class="footer_container gradient">
         <p>&copy 2022 Designed and Developed by Kedar Karki</p>
     </footer>
 </body>
