--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <input type="email" id="email" name="email"><br>
             <label for="message">Your message</label><br>
             <textarea id="message" name="message" rows="4" cols="50"></textarea> <br />
-            <button type="submit" class="button gradient">Send Message</button>
+            <button id="button" type="submit" class="button gradient">Send Message</button>
         </form>
     </div>
 </div>
